syntax = "proto3";

package api;

service PlaySvc {
    rpc Play(PlayReq) returns (PlayRes){}
    rpc Stop(StopReq) returns (StopRes){}
}

message PlayReq {
    string Address = 1;
    int64 Nums = 2;
}

message PlayRes {
    int64 Code = 1;
}


message StopReq {
    int64 Id = 1;
}

message StopRes {
    string Status = 1;
}
